--- a/src/wonder-format/index.html
+++ b/src/wonder-format/index.html
@@ -7,10 +7,14 @@
 <body>
 <!-- test data -->
 
-<tw-storydata name="2019-10-12-clicker" startnode="1" creator="Twine" creator-version="2.3.2" ifid="0015E4DE-EEA5-4D56-A42F-0C1CAB51D81F" zoom="1" format="Wonder" format-version="0.0.5" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">
+<tw-storydata creator="Twine" creator-version="2.3.2" format="Wonder" format-version="0.0.5"
+              hidden ifid="0015E4DE-EEA5-4D56-A42F-0C1CAB51D81F" name="2019-10-12-clicker" options="" startnode="1"
+              zoom="1">
+    <style id="twine-user-stylesheet" role="stylesheet" type="text/twine-css">
 
 
-</style><script role="script" id="twine-user-script" type="text/twine-javascript">window.state = {
+    </style>
+    <script id="twine-user-script" role="script" type="text/twine-javascript">window.state = {
 	gold: 0,
 	goldMine1: {
 		gold: 200
@@ -33,24 +37,44 @@ window.addEventListener('sm.story.started', function(event, eventObject) {
     console.log(eventObject.story);
 });
 
-</script><tw-passagedata pid="1" name="goldMine1" tags="" position="723,830" size="100,100">
-    <w>
-        if(this.goldMine1==undefined) this.goldMine1 = 100;
-        this.gold++;
-        this.goldMine1--;
-        console.log("Hello from template"); </w>
-    В шахте <w>= this.goldMine1 </w> золота.
 
-    [[Еще золота|goldMine1]]
+    </script>
+    <tw-passagedata name="goldMine1" pid="1" position="723,830" size="100,100" tags="">
+        <w>
+            if(this.goldMine1==undefined) this.goldMine1 = 100;
+            this.gold++;
+            this.goldMine1--;
+            console.log("Hello from template");
+        </w>
+        В шахте <w>= this.goldMine1</w> золота. [[= Копать еще|goldMine1]].  Не, отдохну.
 
-    [[Выйти из шахты |worldMap]]</tw-passagedata><tw-passagedata pid="2" name="worldMap" tags="" position="860,549" size="100,100">Перед вами расстилается бескрайняя пустыня, на которой там и сям разбросаны шахты и жилища гоблинов. Вдалеке вы видите лавку гоблина.
+        [[Еще золота|goldMine1]]
+        [[Выйти из шахты |worldMap]]
+    </tw-passagedata>
 
-    [[Зайти в лавку гоблина|goblin]]
-    [[Золотая шахта 1|goldMine1]]
-    [[Золотая шахта 2|goldMine2]]
-    [[Золотая шахта 3|goldMine3]]
-    [[Золотая шахта 4|goldMine4]]</tw-passagedata><tw-passagedata pid="3" name="goblin" tags="" position="560,699" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="4" name="goldMine2" tags="" position="860,699" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="5" name="goldMine3" tags="" position="1010,699" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="6" name="goldMine4" tags="" position="1160,699" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="7" name="header" tags="header" position="1184,447" size="100,100">Заголовок</tw-passagedata>
-    <tw-passagedata pid="99" name="wonder.config" tags="">
+    <tw-passagedata name="worldMap" pid="2" position="860,549" size="100,100" tags="">Перед вами расстилается бескрайняя
+        пустыня, на которой там и сям разбросаны шахты и жилища гоблинов. Вдалеке вы видите лавку гоблина.
+
+        [[Зайти в лавку гоблина|goblin]]
+        [[Золотая шахта 1|goldMine1]]
+        [[Золотая шахта 2|goldMine2]]
+        [[Золотая шахта 3|goldMine3]]
+        [[Золотая шахта 4|goldMine4]]
+    </tw-passagedata>
+    <tw-passagedata name="goblin" pid="3" position="560,699" size="100,100" tags="">Double-click this passage to edit
+        it.
+    </tw-passagedata>
+    <tw-passagedata name="goldMine2" pid="4" position="860,699" size="100,100" tags="">Double-click this passage to edit
+        it.
+    </tw-passagedata>
+    <tw-passagedata name="goldMine3" pid="5" position="1010,699" size="100,100" tags="">Double-click this passage to
+        edit it.
+    </tw-passagedata>
+    <tw-passagedata name="goldMine4" pid="6" position="1160,699" size="100,100" tags="">Double-click this passage to
+        edit it.
+    </tw-passagedata>
+    <tw-passagedata name="header" pid="7" position="1184,447" size="100,100" tags="header">Заголовок</tw-passagedata>
+    <tw-passagedata name="wonder.config" pid="99" tags="">
         var : gold: 77 : #gold
     </tw-passagedata>
 </tw-storydata>
