--- a/src/wonder-format/index.html
+++ b/src/wonder-format/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Test Wonder Format</title>
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height"/>
 </head>
 <body>
 <!-- test data -->
