master - doc dir moved

--- a/src/wonder-format/index.html
+++ b/src/wonder-format/index.html
@@ -55,7 +55,7 @@
     </tw-passagedata>
     <tw-passagedata name="header" pid="7" position="1184,447" size="100,100" tags="header">Заголовок</tw-passagedata>
     <tw-passagedata name="wonder.config" pid="99" tags="">
-        var : gold: 77 : #gold
+        var : gold: 77 : gold
     </tw-passagedata>
 </tw-storydata>
 
