master - try-catch for user script

--- a/src/wonder-format/index.html
+++ b/src/wonder-format/index.html
@@ -18,6 +18,8 @@
     <script id="twine-user-script" role="script" type="text/twine-javascript">
     this.gold = 100;
     this.goldMine1 = 100;
+
+    console.touch(200);
     </script>
     <tw-passagedata name="goldMine1" pid="1" position="723,830" size="100,100" tags="">
         {{
