--- a/src/wonder-format/index.html
+++ b/src/wonder-format/index.html
@@ -41,7 +41,7 @@
 
     <tw-passagedata name="worldMap" pid="2" position="860,549" size="100,100" tags="">Перед вами расстилается бескрайняя
         пустыня, на которой там и сям разбросаны шахты и жилища гоблинов. Вдалеке вы видите лавку гоблина.
-
+        {{w.musicStop()}}
         [[Зайти в лавку гоблина|goblin]]
         [[Золотая шахта 1|goldMine1]]
         [[Золотая шахта 2|goldMine2]]
