master - w.sound() & w.music() with volume

--- a/src/wonder-format/index.html
+++ b/src/wonder-format/index.html
@@ -29,7 +29,7 @@
             this.gold++;
             this.goldMine1--;
 
-            w.music('assets/andys-report.mp3');
+            w.music('assets/andys-report.mp3', 0.1);
 
             console.log("Hello from template");
         }}
