master - w.musicFor(locationName1, url, volume);

--- a/src/wonder-format/index.html
+++ b/src/wonder-format/index.html
@@ -21,7 +21,12 @@
 
     console.log('Hello from userScript');
 
+    w.musicFor('goldMine2', 'assets/andys-report.mp3');
+    w.musicFor('goldMine3', 'assets/andys-report2.mp3');
+    w.musicFor('goldMine4', 'assets/andys-report3.mp3');
+
     console.touch(200);
+
     </script>
     <tw-passagedata name="goldMine1" pid="1" position="723,830" size="100,100" tags="">
         {{
