--- a/src/wonder-format/index.html
+++ b/src/wonder-format/index.html
@@ -9,7 +9,15 @@
         <body>
             <tw-story tags></tw-story>
             <tw-storydata name="2020-04-18-Unlord-Full" startnode="1" creator="TwineWonder" creator-version="2.3.8" ifid="567B0C40-DFD4-4C29-944B-595C17CE7BEA" zoom="1" format="Wonder" format-version="0.6.12" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript">console.log('Hello!');
-Wonder.styleUrl('style.css');</script><tw-tag name="complete" color="green"></tw-tag>,<tw-tag name="gameover" color="red"></tw-tag>,<tw-tag name="glossary" color="purple"></tw-tag>,<tw-tag name="module" color="blue"></tw-tag>,<tw-tag name="todo" color="yellow"></tw-tag><tw-passagedata pid="1" name="start" tags="start module" position="8943,5357" size="100,100">Между пустошью, где воют упыри, и болотами, где пляшут хуликиморы, к югу от королевства некромантов и к востоку от свободных городов, на чистом от колдовской заразы клочке земли притаилась деревня Малые Пихоты.
+Wonder.styleUrl('style.css');
+Wonder.collect({
+    collection: 'gameovers',
+    tags: ['gameover'],
+    addAfter: '<div id="restartButton">[[Начать заново|start]]</div>',
+    hideBack: true
+});
+
+</script><tw-tag name="complete" color="green"></tw-tag>,<tw-tag name="gameover" color="red"></tw-tag>,<tw-tag name="glossary" color="purple"></tw-tag>,<tw-tag name="module" color="blue"></tw-tag>,<tw-tag name="todo" color="yellow"></tw-tag><tw-passagedata pid="1" name="start" tags="start module" position="8943,5357" size="100,100">Между пустошью, где воют упыри, и болотами, где пляшут хуликиморы, к югу от королевства некромантов и к востоку от свободных городов, на чистом от колдовской заразы клочке земли притаилась деревня Малые Пихоты.
 
 Жили там люди, не тужили,  спасались от заразы всякой чесночной колбасой да ядреным квасом на хрену. И все у них было хорошо, ведь деревня была такая маленькая, что любой забежавший завоеватель мог только почесать в затылке, плюнуть и взять оброк тем, что было - большими запасами жгучих корнеплодов. А многие завоеватели и того не могли - ибо брала их корча еще на подступах к деревне, ибо запах стоял там такой, что если ветер начинал дуть с юга, то на расстоянии двух дней пешего пути все упыри на северных пустошях приглашали душеприказчиков и приказывали всем долго жить. 
 
