--- a/src/wonder-format/index.html
+++ b/src/wonder-format/index.html
@@ -10,7 +10,12 @@
             <tw-story tags></tw-story>
             <tw-storydata name="wonder-demo" startnode="1" creator="TwineWonder" creator-version="2.3.8" ifid="993B579C-CE55-436E-95BA-EA224BA8A4A7" zoom="1" format="Wonder" format-version="0.6.12" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript">this.coins = 0;
 
-Wonder.parentApi().enable();
+//Wonder.parentApi().enable();
+
+Wonder.disableLocalSave(false);
+Wonder.saveSlot('saveslot_TEST');
+Wonder.autoSave();
+Wonder.load();
 
 Wonder.collect({
     collection: 'gameover',
@@ -25,65 +30,81 @@ Wonder.collect({
     title: 'Книжки',
     tags: ['book'],
     hideBack: true
-});</script><tw-tag name="gameover" color="red"></tw-tag>,<tw-tag name="book" color="yellow"></tw-tag><tw-passagedata pid="1" name="start" tags="" position="911,53.5" size="100,100">Демо игра для показа возможностей формата Wonder.
+});</script><tw-tag name="gameover" color="red"></tw-tag>,<tw-tag name="book" color="yellow"></tw-tag><tw-passagedata pid="1" name="start" tags="" position="911,53" size="100,100">Демо игра для показа возможностей формата Wonder.
 
 Чтобы раскрыть всю силу формата, используйте для названий пассажей и их тегов - латиницу без пробелов. Это позволит формату создавать рабочие id и class для тегов, что позволит создавать кастомный дизайн для многих страниц, ссылок и так далее.
 
 [[Коллекции|collections]]
-[[Переменные|vars]]</tw-passagedata><tw-passagedata pid="2" name="collections" tags="" position="586,198.5" size="100,100">Вы стоите у фонтана, в котором плещутся пираньи. Вдали возвышается замок чародея. Перед вами торговец со старинными книжками. Позади него надпись - &quot;не богохульствуй и не оскорбляй чародея&quot;
+[[Переменные|vars]]
+[[Save/load|save-loads]]</tw-passagedata><tw-passagedata pid="2" name="collections" tags="" position="586,198" size="100,100">Вы стоите у фонтана, в котором плещутся пираньи. Вдали возвышается замок чародея. Перед вами торговец со старинными книжками. Позади него надпись - &quot;не богохульствуй и не оскорбляй чародея&quot;
 
 [[Прыгнуть в фонтан|collections-pirahnas]]
 [[Богохульствовать|collections-god-yell]]
 [[Пошутить о чародее|collections-wizard-yell]]
 [[Почитать книжки|collections-books]]
 
-</tw-passagedata><tw-passagedata pid="3" name="vars" tags="" position="1199,201.5" size="100,100">В кармане у вас {{= this.coins}} монеток.
+</tw-passagedata><tw-passagedata pid="3" name="vars" tags="" position="1199,201" size="100,100">В кармане у вас {{= this.coins}} монеток.
 
 [[Заработать 5 золотых|vars-coins-5]]
-[[Заработать 15 золотых|vars-coins-15]]</tw-passagedata><tw-passagedata pid="4" name="collections-pirahnas" tags="gameover" position="175,339.5" size="100,100">Ааааа!  Пираньи набрасываются на ваше тело и за считанные секунды обгладывают его до костей. Глаза, волосы, кожа, мясо, желудок и сердце - всё, все уничтожается этим злобными малютками.
+[[Заработать 15 золотых|vars-coins-15]]</tw-passagedata><tw-passagedata pid="4" name="collections-pirahnas" tags="gameover" position="175,339" size="100,100">Ааааа!  Пираньи набрасываются на ваше тело и за считанные секунды обгладывают его до костей. Глаза, волосы, кожа, мясо, желудок и сердце - всё, все уничтожается этим злобными малютками.
 
-Это конец.</tw-passagedata><tw-passagedata pid="5" name="collections-god-yell" tags="" position="325,339.5" size="100,100">Вы ругаете древних и новых богов за их оскорбительное высокомерие и невмешательства, за сексуальную распущенность и полное нежелание одарить вас хотя бы сундуком золота, не говоря уже о талантах.
+Это конец.</tw-passagedata><tw-passagedata pid="5" name="collections-god-yell" tags="" position="325,339" size="100,100">Вы ругаете древних и новых богов за их оскорбительное высокомерие и невмешательства, за сексуальную распущенность и полное нежелание одарить вас хотя бы сундуком золота, не говоря уже о талантах.
 
 Внезапно раздаётся гром.
 
 [[Продолжать богохульствовать|collections-god-yell2]]
-[[Замолчать|collections]]</tw-passagedata><tw-passagedata pid="6" name="collections-wizard-yell" tags="" position="475,338.5" size="100,100">Вы остроумно шутите о чувстве вкуса человека, выстроившего такой нелепый и претенциозный замок, что возвышается вдали.
+[[Замолчать|collections]]</tw-passagedata><tw-passagedata pid="6" name="collections-wizard-yell" tags="" position="475,338" size="100,100">Вы остроумно шутите о чувстве вкуса человека, выстроившего такой нелепый и претенциозный замок, что возвышается вдали.
 
 Внезапно вы чувствуете, что больше не можете говорить и вам хочется морковки.
 
-[[Осмотреть себя|collections-wizard-yell-end]]</tw-passagedata><tw-passagedata pid="7" name="collections-books" tags="" position="664,338.5" size="100,100">На деревянном прилавке лежит куча старинных фолиантов. Что почитать?
+[[Осмотреть себя|collections-wizard-yell-end]]</tw-passagedata><tw-passagedata pid="7" name="collections-books" tags="" position="664,338" size="100,100">На деревянном прилавке лежит куча старинных фолиантов. Что почитать?
 
 [[Гномы великие и ужасные|collections-books-gnomes]]
 [[Архитектура для чародеев|collections-books-arch-wiz]]
 [[Архитектура для чайников|collections-books-arch-pots]]
 [[Как выжить в этом мире|collections-books-how-life]]
 [[Умные люди в деревне Малые Пихоты|book-village-people]]
-[[Ничего не читать|collections]]</tw-passagedata><tw-passagedata pid="8" name="collections-god-yell2" tags="gameover" position="325,489.5" size="100,100">Ослепительная молния бьет с неба прямо в ваше темечко. Книги разлетаются в стороны, испуганный торговец падает ниц и просит богов их пощадить. Пираньи выпрыгивают из фонтана.
+[[Ничего не читать|collections]]</tw-passagedata><tw-passagedata pid="8" name="collections-god-yell2" tags="gameover" position="325,489" size="100,100">Ослепительная молния бьет с неба прямо в ваше темечко. Книги разлетаются в стороны, испуганный торговец падает ниц и просит богов их пощадить. Пираньи выпрыгивают из фонтана.
 
-Так боги наказывают богохульников.</tw-passagedata><tw-passagedata pid="9" name="collections-wizard-yell-end" tags="gameover" position="475,488.5" size="100,100">Чародей превратил вас в кролика. Книжный торговец приближается к вам и ласково улыбается, одновременно доставая ножик из-за пояса.
+Так боги наказывают богохульников.</tw-passagedata><tw-passagedata pid="9" name="collections-wizard-yell-end" tags="gameover" position="475,488" size="100,100">Чародей превратил вас в кролика. Книжный торговец приближается к вам и ласково улыбается, одновременно доставая ножик из-за пояса.
 
-Кажется, ваши приключения окончены.</tw-passagedata><tw-passagedata pid="10" name="collections-books-gnomes" tags="book" position="502,698.5" size="100,100">&lt;h1&gt;Гномы великие и ужасные&lt;/h1&gt;
+Кажется, ваши приключения окончены.</tw-passagedata><tw-passagedata pid="10" name="collections-books-gnomes" tags="book" position="502,698" size="100,100">&lt;h1&gt;Гномы великие и ужасные&lt;/h1&gt;
 
-Это книжка о гномах скучна.</tw-passagedata><tw-passagedata pid="11" name="collections-books-arch-wiz" tags="book" position="632,698.5" size="100,100">&lt;h1&gt;Архитектура для чародеев&lt;/h1&gt;
+Это книжка о гномах скучна.</tw-passagedata><tw-passagedata pid="11" name="collections-books-arch-wiz" tags="book" position="632,698" size="100,100">&lt;h1&gt;Архитектура для чародеев&lt;/h1&gt;
 
 Замки должны быть такими, чтобы вселять ужас в сердца простолюдинов и уважение в сердца чудовищ.
-</tw-passagedata><tw-passagedata pid="12" name="collections-books-arch-pots" tags="book" position="754,696.5" size="100,100">Архитектура для чайников
+</tw-passagedata><tw-passagedata pid="12" name="collections-books-arch-pots" tags="book" position="754,696" size="100,100">Архитектура для чайников
 
-Если вы чайник - вам достаточно и обычного стола, стоящего в прямоугольной комнате. </tw-passagedata><tw-passagedata pid="13" name="collections-books-how-life" tags="book" position="902,701.5" size="100,100">Как выжить в этом мире
+Если вы чайник - вам достаточно и обычного стола, стоящего в прямоугольной комнате. </tw-passagedata><tw-passagedata pid="13" name="collections-books-how-life" tags="book" position="902,701" size="100,100">Как выжить в этом мире
 
-Постарайтесь никого не злить.</tw-passagedata><tw-passagedata pid="14" name="vars-coins-5" tags="" position="1033,352.5" size="100,100">{{  
+Постарайтесь никого не злить.</tw-passagedata><tw-passagedata pid="14" name="vars-coins-5" tags="" position="1033,352" size="100,100">{{  
     this.coins += 5;
 }}
 Вы заработали на 5 монеток больше. Теперь у вас {{= this.coins}} монет.
 
 [[Заработать ещё 5 монеток|vars-coins-5]]
-[[Вернуться|vars]]</tw-passagedata><tw-passagedata pid="15" name="vars-coins-15" tags="" position="1356,357.5" size="100,100">{{  
+[[Вернуться|vars]]</tw-passagedata><tw-passagedata pid="15" name="vars-coins-15" tags="" position="1356,357" size="100,100">{{  
     this.coins += 15;
 }}
 Вы заработали на 15 монеток больше. Теперь у вас {{= this.coins}} монет.
 
 [[Заработать ещё 5 монеток|vars-coins-5]]
 [[Заработать ещё 15 монеток|vars-coins-15]]
-[[Вернуться|vars]]</tw-passagedata><tw-passagedata pid="16" name="book-village-people" tags="book" position="1037,696.5" size="100,100">Деревня была небольшая, поэтому признанных умников было только три - кузнец Дробила, ворожея Ядровка и старый солдат Шибузук, которого по такому случаю заставили протрезветь, обмакнув три раза в корыто с шипящим молодым квасом, который еще недостаточно забродил, чтобы стать хмельным.</tw-passagedata></tw-storydata>
-            </body>
+[[Вернуться|vars]]</tw-passagedata><tw-passagedata pid="16" name="book-village-people" tags="book" position="1037,696" size="100,100">Деревня была небольшая, поэтому признанных умников было только три - кузнец Дробила, ворожея Ядровка и старый солдат Шибузук, которого по такому случаю заставили протрезветь, обмакнув три раза в корыто с шипящим молодым квасом, который еще недостаточно забродил, чтобы стать хмельным.</tw-passagedata><tw-passagedata pid="17" name="save-loads" tags="" position="1636,135" size="100,100">Здесь можно сохранять и загружать игру.
+
+[[Загрузить 1|load1]] / [[Сохранить 1|save1]]
+[[Загрузить 2|load2]] / [[Сохранить 2|save2]]</tw-passagedata><tw-passagedata pid="18" name="load1" tags="" position="1516,262" size="100,100">{{
+	Wonder.load(&#39;save_slot1&#39;);
+}}
+Вы загрузили игру</tw-passagedata><tw-passagedata pid="19" name="save1" tags="" position="1526,382" size="100,100">{{
+	Wonder.save(&#39;save_slot1&#39;);
+}}
+Вы сохранили игру</tw-passagedata><tw-passagedata pid="20" name="load2" tags="" position="1831,277" size="100,100">{{
+	Wonder.load(&#39;save_slot2&#39;);
+}}
+Вы загрузили игру 2</tw-passagedata><tw-passagedata pid="21" name="save2" tags="" position="1841,392" size="100,100">{{
+	Wonder.save(&#39;save_slot2&#39;);
+}}
+Вы сохранили игру 2</tw-passagedata></tw-storydata>
+        </body>
     </html>
