build 0.6.16 - Wonder.jsUrl(scriptUrl, callback)

--- a/src/wonder-format/index.html
+++ b/src/wonder-format/index.html
@@ -13,9 +13,13 @@
 //Wonder.parentApi().enable();
 
 Wonder.disableLocalSave(false);
-Wonder.saveSlot('saveslot_TEST');
-Wonder.autoSave();
-Wonder.load();
+//Wonder.saveSlot('saveslot_TEST');
+//Wonder.autoSave();
+//Wonder.load();
+
+Wonder.jsUrl('./assets/test.js', ()=> {
+    console.log('hello after test js load');
+});
 
 Wonder.collect({
     collection: 'gameover',
