--- a/src/wonder-format/index.html
+++ b/src/wonder-format/index.html
@@ -13,10 +13,8 @@
             </style>
                 <script role="script" id="twine-user-script" type="text/twine-javascript">this.coins = 0;
 
-Wonder.parentApi().enable();
-
-Wonder.disableLocalSave(true);
-Wonder.saveSlot('saveslot_TEST');
+//Wonder.enableExternalApi(false);
+Wonder.saveSlot('saveslot_TEST2');
 Wonder.autoSave();
 Wonder.load();
 
