--- a/src/wonder-format/index.html
+++ b/src/wonder-format/index.html
@@ -40,7 +40,7 @@ Wonder.collect({
 Чтобы раскрыть всю силу формата,  {{
                 w.showText('-- Кастомный текст 000 -- ');
                 }}  используйте для названий пассажей и их тегов - латиницу без пробелов. Это позволит формату создавать рабочие id и class для тегов, что позволит создавать кастомный дизайн для многих страниц, ссылок и так далее.
-
+  {{ w.music('./assets/andys-report.mp3', 0.03);}}
  {{
     w.showText('Пример работы w.showText');
     w.showText(' Кастомные ссылки: <span class="inline">[[Коллекции|collections]] </span>');
@@ -50,7 +50,7 @@ Wonder.collect({
 [[Коллекции|collections]]
 [[Переменные|vars]]
 [[Save/load|save-loads]]</tw-passagedata><tw-passagedata pid="2" name="collections" tags="" position="586,198" size="100,100">Вы стоите у фонтана, в котором плещутся пираньи. Вдали возвышается замок чародея. Перед вами торговец со старинными книжками. Позади него надпись - &quot;не богохульствуй и не оскорбляй чародея&quot;
-
+                    {{ w.musicStop();}}
 [[Прыгнуть в фонтан|collections-pirahnas]]
 [[Богохульствовать|collections-god-yell]]
 [[Пошутить о чародее|collections-wizard-yell]]
