--- a/src/wonder-format/index.html
+++ b/src/wonder-format/index.html
@@ -14,9 +14,7 @@
                 <script role="script" id="twine-user-script" type="text/twine-javascript">this.coins = 0;
 
 //Wonder.enableExternalApi(false);
-Wonder.saveSlot('saveslot_TEST2');
-Wonder.autoSave();
-Wonder.load();
+Wonder.saveSlot('saveslotTestLast');
 
 Wonder.jsUrl('./assets/test.js', ()=> {
     console.log('hello after test js load');
